<resources>
    <string name="app_name">OpenSource</string>
    <string name="discover">发现</string>
    <string name="news">综合</string>
    <string name="my">我</string>
    <string name="tweet">动弹</string>
    <string name="example_score">积分：0</string>
    <string name="example_user_name">用户名</string>
    <string name="zero">0</string>
    <string name="favorite">收藏</string>
    <string name="follow">关注</string>
    <string name="fans">粉丝</string>
    <string name="my_message">我的消息</string>
    <string name="my_blog">我的博客</string>
    <string name="my_question">我的问答</string>
    <string name="my_shake">摇一摇</string>
    <string name="login_input_username_hint">请输入账号</string>
    <string name="login_input_password_hint">请输入密码</string>
    <string name="add_pic">添加图片</string>
    <string name="login">对应用授权</string>
    <string name="search">搜索</string>
    <string name="into">Start</string>
</resources>
