<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_alignParentBottom="true"

        android:background="#FFFFFF" >

        <RelativeLayout
            android:id="@+id/news_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/news_image"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_nav_news_normal" />
                <TextView
                    android:id="@+id/news_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textSize="10dp"
                    android:text="@string/news"
                    android:textColor="#939292" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/tweet_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/tweet_image"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_nav_tweet_normal" />

                <TextView
                    android:id="@+id/tweet_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/tweet"
                    android:textSize="10dp"
                    android:textColor="#939292" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/add_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >


            <ImageView
                android:id="@+id/add_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/add" />


        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/discover_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/discover_image"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_nav_discover_normal" />

                <TextView
                    android:id="@+id/discover_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/discover"
                    android:textSize="10dp"
                    android:textColor="#939292" />
            </LinearLayout>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/my_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/my_image"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_nav_my_normal" />

                <TextView
                    android:id="@+id/my_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/my"
                    android:textSize="10dp"
                    android:textColor="#939292" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>